--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "quazar-app-1",
+  "name": "quazar-app-starter",
   "version": "0.0.1",
   "description": "",
   "productName": "Quasar App",
