--- a/now.json
+++ b/now.json
@@ -6,5 +6,5 @@
       "use": "@now/node"
     }
   ],
-  "routes": [{ "src": "/", "dest": "quasar.conf.js" }]
+  "routes": [{ "src": "/", "dest": "/dist/spa" }]
 }
