Added PWA settings

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "quaser-startup-3",
+  "name": "quasas-starter-4",
   "version": "0.0.1",
   "description": "",
   "productName": "Quasar App",
