--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "quasar-starter-5",
+  "name": "quasar-starter-6",
   "version": "0.0.1",
   "description": "",
   "productName": "Quasar App",
@@ -13,7 +13,9 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
-    "quasar": "^1.0.0"
+    "html-entities": "1.3.1",
+    "quasar": "^1.0.0",
+    "vue-uuid": "1.1.1"
   },
   "devDependencies": {
     "@quasar/app": "^1.0.0",
