--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "@quasar/app": "^1.0.0",
+    "@quasar/quasar-app-extension-icon-genie": "^1.1.3",
     "devtron": "^1.4.0",
     "electron": "^8.2.1",
     "electron-debug": "^3.0.1",
